Change the image format of the logo and the lettering from png to svg, and made spelling corrections.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="navbar_brand">
                 <h1 class="navbar_logo">
                     <a href="http://www.mendozalovers.com/">
-                        <img src="img/logo.png" alt="Logo de Mendoza Lovers.">
+                        <img src="img/logo.svg" alt="Logo de Mendoza Lovers.">
                     </a>
                 </h1>
             </div>
@@ -73,10 +73,10 @@
             <div class="section_wrapper">
                 <article class="section_article article--left">
                     <div class="section_lettering">
-                        <img src="img/lettering.png" alt="Frase 'Eu sou Carla Ribeiro' em itálico.">
+                        <img src="img/lettering.svg" alt="Frase 'Eu sou Carla Ribeiro' em itálico.">
                     </div>
                     <h3 class="section_subtitle">&laquo;Organizadora de Eventos e Turismo&raquo;</h3>
-                    <p class="section_text text--hug">Me dedico a organizar experiências únicas e especiais em Mendoza. Quer viajar por turismo, celebrar um evento especial, ou por negócios? Organizo a sua vinda a Mendoza sob medida, do princípio ao fim, com dicas de todas as atividades que existe em cada estação do ano. Sou uma <span class="fw_bold">Mendoza Lover</span> e gostaria que todos os visitantes se apaixonem por esse destino tão especial que é Mendoza.</p>
+                    <p class="section_text text--hug">Me dedico a organizar experiências únicas e especiais em Mendoza. Quer viajar por turismo, celebrar um evento especial, ou por negócios? Organizo a sua vinda a Mendoza sob medida, do princípio ao fim, com dicas de todas as atividades que existem cada estação do ano. Sou uma <span class="fw_bold">Mendoza Lover</span> e gostaria que todos os visitantes se apaixonem por esse destino tão especial que é Mendoza.</p>
                 </article>
                 <figure class="section_img_container">
                     <img class="section_img" src="img/about.jpg" alt="Fotografia de Carla Ribeiro a beber um copo de vinho com uma paisagem impressionante ao fundo.">
