--- a/lang/en/index.html
+++ b/lang/en/index.html
@@ -38,7 +38,7 @@
             <div class="navbar_brand">
                 <h1 class="navbar_logo">
                     <a href="http://www.mendozalovers.com/lang/es">
-                        <img src="../../img/logo.png" alt="Mendoza Lovers logo.">
+                        <img src="../../img/logo.svg" alt="Mendoza Lovers logo.">
                     </a>
                 </h1>
             </div>
@@ -73,7 +73,7 @@
             <div class="section_wrapper">
                 <article class="section_article article--left">
                     <div class="section_lettering">
-                        <img src="../../img/lettering.png" alt="Phrase 'I am Carla Ribeiro' written in cursive.">
+                        <img src="../../img/lettering.svg" alt="Phrase 'I am Carla Ribeiro' written in cursive.">
                     </div>
                     <h3 class="section_subtitle">&laquo;Travel & Event Planner&raquo;</h3>
                     <p class="section_text text--hug">I organize unique experiences in Mendoza. Would you like to visit Mendoza on holiday, to celebrate a special event or for a business trip? I will advise you on the best activities that Mendoza offers and I will design a personalized itinerary for you. I am a <span class="fw_bold">Mendoza Lover</span> and I would like all visitors to fall in love with this special destination.</p>
