--- a/lang/es/index.html
+++ b/lang/es/index.html
@@ -38,7 +38,7 @@
             <div class="navbar_brand">
                 <h1 class="navbar_logo">
                     <a href="http://www.mendozalovers.com/lang/es">
-                        <img src="../../img/logo.png" alt="Logo de Mendoza Lovers.">
+                        <img src="../../img/logo.svg" alt="Logo de Mendoza Lovers.">
                     </a>
                 </h1>
             </div>
@@ -73,7 +73,7 @@
             <div class="section_wrapper">
                 <article class="section_article article--left">
                     <div class="section_lettering">
-                        <img src="../../img/lettering.png" alt="Frase 'Soy Carla Ribeiro' escrita en cursiva.">
+                        <img src="../../img/lettering.svg" alt="Frase 'Soy Carla Ribeiro' escrita en cursiva.">
                     </div>
                     <h3 class="section_subtitle">&laquo;Travel & Event Planner&raquo;</h3>
                     <p class="section_text text--hug">Me dedico a organizar experiencias únicas en Mendoza ¿Te gustaría viajar por turismo, celebrar un evento especial o por negocios? Diseñaré tu visita a medida, de principio a fin, asesorándote sobre todas las actividades que existen en cada estación del año. Soy una <span class="fw_bold">Mendoza Lover</span> y me gustaría que todos los visitantes se enamoren de este destino tan especial.</p>
@@ -202,7 +202,7 @@
                 <button class="contact_btn">
                     <a href="https://forms.gle/Higya9XgeHs5SwJ37" target="_blank">
                         <span class="contact_icon fa-solid fa-file-circle-check"></span>
-                        <span class="contact_label">COTACTO</span>
+                        <span class="contact_label">COTIZACIÓN</span>
                     </a>
                 </button>
                 <button class="contact_btn">
