--- a/mendoza.html
+++ b/mendoza.html
@@ -27,7 +27,7 @@
             <div class="navbar_brand">
                 <h1 class="navbar_logo">
                     <a href="mendoza.html">
-                        <img src="img/logo.png" alt="Logo de Mendoza Lovers.">
+                        <img src="img/logo.svg" alt="Logo de Mendoza Lovers.">
                     </a>
                 </h1>
             </div>
@@ -48,12 +48,12 @@
 
         <header class="mendoza bg--camel">
             <h2 class="mendoza_title">O QUE OFERECE MENDOZA?</h2>
-            <p class="mendoza_text">Um <span class="fw_bold">destino único</span> por suas paisagens sonhadas <span class="fw_bold">de janeiro a janeiro.</span> Desde o sol brilhante sobre os vinhedos até os picos nevados da Codilheira dos Andes, <span class="fw_bold">Mendoza nos convida para desfrutá-la em todas as estações</span> e viver experiencias inesquecíveis.</p>
+            <p class="mendoza_text">Um <span class="fw_bold">destino único</span> por suas paisagens sonhadas <span class="fw_bold">de janeiro a janeiro.</span> Desde o sol brilhante sobre os vinhedos até os picos nevados da Cordilheira dos Andes, <span class="fw_bold">Mendoza nos convida para desfrutá-la em todas as estações</span> e viver experiencias inesquecíveis.</p>
         </header>
 
         <section class="section_h bg--red-wine">
             <article class="section_article">
-                <h3 class="section_title">VINHO</h3>
+                <h3 class="section_title">ENOTURISMO</h3>
                 <p class="section_text fw_bold">Visitas a Grandes Vinícolas // Vinícolas Boutique // Cavalgada entre Vinhedos // Bicicleta entre vinhedos // Dia de Colheita.</p>
             </article>
             <figure class="section_img_container">
