--- a/lang/en/mendoza.html
+++ b/lang/en/mendoza.html
@@ -27,7 +27,7 @@
             <div class="navbar_brand">
                 <h1 class="navbar_logo">
                     <a href="mendoza.html">
-                        <img src="../../img/logo.png" alt="Logo de Mendoza Lovers.">
+                        <img src="../../img/logo.svg" alt="Logo de Mendoza Lovers.">
                     </a>
                 </h1>
             </div>
@@ -53,7 +53,7 @@
 
         <section class="section_h bg--red-wine">
             <article class="section_article">
-                <h3 class="section_title">WINE</h3>
+                <h3 class="section_title">WINE-TOURISM</h3>
                 <p class="section_text fw_bold">Visits to Big Wineries and Boutique Wineries // Bike through vineyards // Horseriding through vineyards // Harvest day.</p>
             </article>
             <figure class="section_img_container">
