--- a/index.html
+++ b/index.html
@@ -57,51 +57,49 @@
                 <a class="navbar_link contact_link" href="#contact">CONTATO</a>
             </nav>
         </div>
-        <!-- Slider main container -->
-        <div class="swiper">
-            <!-- Slider wrapper -->
-            <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide">
-                    <figure>
-                        <img class="section_img" src="img/slider/slider_1.jpg">
-                    </figure>
+        <header class="hero bg--red-wine">
+            <!-- Slider main container -->
+            <div class="swiper">
+                <!-- Slider wrapper -->
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide">
+                        <figure>
+                            <img class="section_img" src="img/slider/slider_1.jpg">
+                        </figure>
+                    </div>
+                    <div class="swiper-slide">
+                        <figure>
+                            <img class="section_img" src="img/slider/slider_2.jpg">
+                        </figure>
+                    </div>
+                    <div class="swiper-slide">
+                        <figure>
+                            <img class="section_img" src="img/slider/slider_3.jpg">
+                        </figure>
+                    </div>
+                    <div class="swiper-slide">
+                        <figure>
+                            <img class="section_img" src="img/slider/slider_4.jpg">
+                        </figure>
+                    </div>
+                    <div class="swiper-slide">
+                        <figure>
+                            <img class="section_img" src="img/slider/slider_5.jpeg">
+                        </figure>
+                    </div>
                 </div>
-                <div class="swiper-slide">
-                    <figure>
-                        <img class="section_img" src="img/slider/slider_2.jpg">
-                    </figure>
-                </div>
-                <div class="swiper-slide">
-                    <figure>
-                        <img class="section_img" src="img/slider/slider_3.jpg">
-                    </figure>
-                </div>
-                <div class="swiper-slide">
-                    <figure>
-                        <img class="section_img" src="img/slider/slider_4.jpg">
-                    </figure>
-                </div>
-            </div>
-            <!-- Pagination -->
-            <div class="swiper-pagination"></div>
-            <!-- Navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-        </div>
-        <!-- <header class="hero bg--red-wine">
-            <div class="bg_patch"></div>
-            <div class="hero_video">
-                <video autoplay loop muted preload="auto" poster="img/hero.jpg">
-                    <source src="img/video.mp4"  type="video/mp4">
-                    <source src="img/video.webm" type="video/webm">
-                    <source src="img/video.ogv"  type="video/ogg">
-                </video>
+                <!-- Pagination -->
+                <div class="swiper-pagination"></div>
+                <!-- Navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
             </div>
             <div class="hero_slogan">
                 <h2 class="hero_title">DESCUBRIR <span class="fw_bold">MENDOZA</span></h2>
             </div>
-        </header> -->
+            <div class="hero_white-stripe"></div>
+        </header>    
         <section id="about" class="section_v">
             <div class="section_wrapper">
                 <article class="section_article article--left">
