--- a/lang/en/index.html
+++ b/lang/en/index.html
@@ -57,38 +57,49 @@
                 <a class="navbar_link contact_link" href="#contact">CONTACT</a>
             </nav>
         </div>
-        <!-- Slider main container -->
-        <div class="swiper">
-            <!-- Slider wrapper -->
-            <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide">
-                    <figure>
-                        <img class="section_img" src="../../img/slider/slider_1.jpg">
-                    </figure>
+        <header class="hero bg--red-wine">
+            <!-- Slider main container -->
+            <div class="swiper">
+                <!-- Slider wrapper -->
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide">
+                        <figure>
+                            <img class="section_img" src="../../img/slider/slider_1.jpg">
+                        </figure>
+                    </div>
+                    <div class="swiper-slide">
+                        <figure>
+                            <img class="section_img" src="../../img/slider/slider_2.jpg">
+                        </figure>
+                    </div>
+                    <div class="swiper-slide">
+                        <figure>
+                            <img class="section_img" src="../../img/slider/slider_3.jpg">
+                        </figure>
+                    </div>
+                    <div class="swiper-slide">
+                        <figure>
+                            <img class="section_img" src="../../img/slider/slider_4.jpg">
+                        </figure>
+                    </div>
+                    <div class="swiper-slide">
+                        <figure>
+                            <img class="section_img" src="../../img/slider/slider_5.jpeg">
+                        </figure>
+                    </div>
                 </div>
-                <div class="swiper-slide">
-                    <figure>
-                        <img class="section_img" src="../../img/slider/slider_2.jpg">
-                    </figure>
-                </div>
-                <div class="swiper-slide">
-                    <figure>
-                        <img class="section_img" src="../../img/slider/slider_3.jpg">
-                    </figure>
-                </div>
-                <div class="swiper-slide">
-                    <figure>
-                        <img class="section_img" src="../../img/slider/slider_4.jpg">
-                    </figure>
-                </div>
+                <!-- Pagination -->
+                <div class="swiper-pagination"></div>
+                <!-- Navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
             </div>
-            <!-- Pagination -->
-            <div class="swiper-pagination"></div>
-            <!-- Navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-        </div>
+            <div class="hero_slogan">
+                <h2 class="hero_title">DISCOVER <span class="fw_bold">MENDOZA</span></h2>
+            </div>
+            <div class="hero_white-stripe"></div>
+        </header>  
         <section id="about" class="section_v">
             <div class="section_wrapper">
                 <article class="section_article article--left">
