Ad responsive implementation

--- a/lang/es/index.html
+++ b/lang/es/index.html
@@ -123,6 +123,15 @@
             </div>
             <div class="hero_white-stripe"></div>
         </header>  
+        <div class="ad_01 bg--camel">
+            <h2 class="ad_discount">15% OFF</h2>
+            <h4 class="ad_category">TOURS A BODEGAS</h4>
+            <button class="ad_btn">
+                <a href="https://wa.me/5492616094078/?text=¡Hola!, me gustaría saber más detalles sobre la promoción de Tours a Bodegas." target="_blank">
+                    <span>Quiero consultar</span>
+                </a>
+            </button>
+        </div>
         <section id="about" class="section_v">
             <div class="section_wrapper">
                 <article class="section_article article--left">
