--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     gtag('config', 'G-KVVTNYW6C0');
     </script>
     
+    <link href="img/favicon.ico" type="image/x-icon" rel="shortcut icon">
+    <link href="img/favicon.ico" type="image/x-icon" rel="icon">
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;700&family=Assistant:wght@400;700&display=swap" rel="stylesheet">
