Fix Contact and Instagram urls

--- a/index.html
+++ b/index.html
@@ -242,13 +242,13 @@
         <aside id="contact" class="contact bg--camel">
             <div class="contact_actions">
                 <button class="contact_btn">
-                    <a href="https://wa.me/5492615704456/?text=¡Olá!" target="_blank">
+                    <a href="https://wa.me/5492616094078/?text=¡Olá!" target="_blank">
                         <span class="contact_icon fa-brands fa-whatsapp"></span>
                         <span class="contact_label">CONSULTAS</span>
                     </a>
                 </button>
                 <button class="contact_btn">
-                    <a href="https://www.instagram.com/mendozalovers_by_carlaribeiro/" target="_blank">
+                    <a href="https://www.instagram.com/_mendozalovers/" target="_blank">
                         <span class="contact_icon fa-brands fa-instagram"></span>
                         <span class="contact_label">SIGA-NOS</span>
                     </a>
